Update body name to updateUser for updating user
